--- a/style.css
+++ b/style.css
@@ -1,4 +1,52 @@
-body{
-    margin:0;
-    padding:0;
+/* style.css */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body, html {
+  height: 100%;
+  width: 100%;
+  background-color: black;
+  overflow: hidden;
+}
+
+canvas {
+  display: block;
+}
+
+
+
+#ui {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  color: white;
+  font-family: monospace;
+  font-size: 20px;
+  z-index: 1;
+}
+
+#gameOver {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: red;
+  font-size: 40px;
+  font-family: monospace;
+  text-align: center;
+  z-index: 2;
+}
+
+.hidden {
+  display: none;
+}
+
+button {
+  margin-top: 20px;
+  font-size: 18px;
+  padding: 10px 20px;
+  cursor: pointer;
 }
